Creación de un componente control para las entradas o campos del formulario y necesario pero es para practicar. Se agregó y colocó css por componente.

--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,1 +1,16 @@
-<p>new-ticket works!</p>
+<form>
+    <app-control label="Title">
+        <input name="title" id="title" type="text"/>
+    </app-control>
+    <app-control label="Request">
+        <textarea name="Request" id="Request" rows="3"></textarea>
+    </app-control>
+    <p>
+        <button appButton>
+            Submit
+            <span ngProjectAs="icon">
+                >
+            </span>
+        </button>
+    </p>
+</form>
