--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form>
+<form (ngSubmit)="onSubmit(titleInput,textInput.value)" #form>
     <app-control label="Title">
-        <input name="title" id="title" type="text"/>
+        <input name="title" id="title" type="text" #titleInput/>
     </app-control>
     <app-control label="Request">
-        <textarea name="Request" id="Request" rows="3"></textarea>
+        <textarea name="Request" id="Request" rows="3" #textInput></textarea>
     </app-control>
     <p>
         <button appButton>
