--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit(titleInput,textInput.value)" #form>
+<form (ngSubmit)="onSubmit(titleInput.value,textInput.value)" #form>
     <app-control label="Title">
         <input name="title" id="title" type="text" #titleInput #input/>
     </app-control>
